--- a/config.json
+++ b/config.json
@@ -1,26 +1,31 @@
 {
-    "algo": "cryptonight",
-    "av": 0,
-    "background": false,
-    "colors": true,
-    "cpu-affinity": null,
-    "cpu-priority": 0,
-    "donate-level": 1,
-    "log-file": null,
-    "max-cpu-usage": 80,
-    "print-time": 60,
-    "retries": 5,
-    "retry-pause": 5,
-    "safe": true,
-    "syslog": false,
-    "threads": null,
+    "algo": "cryptonight",  // cryptonight (default) or cryptonight-lite
+    "av": 0,                // algorithm variation, 0 auto select
+    "background": false,    // true to run the miner in the background
+    "colors": true,         // false to disable colored output    
+    "cpu-affinity": null,   // set process affinity to CPU core(s), mask "0x3" for cores 0 and 1
+    "cpu-priority": 0,      // set process priority (0 idle, 2 normal to 5 highest)
+    "donate-level": 1,      // donate level, mininum 1%
+    "log-file": null,       // log all output to a file, example: "c:/some/path/xmrig.log"
+    "max-cpu-usage": 80,    // maximum CPU usage for automatic mode, usually limiting factor is CPU cache not this option.  
+    "print-time": 60,       // print hashrate report every N seconds
+    "retries": 5,           // number of times to retry before switch to backup server
+    "retry-pause": 5,       // time to pause between retries
+    "safe": true,           // true to safe adjust threads and av settings for current CPU
+    "syslog": false,        // use system log for output messages
+    "threads": null,        // number of miner threads
     "pools": [
         {
-            "url": "coalmine.pro:5555",
-            "user": "<wallet address here>",
-            "pass": "<WorkerName>:<notifications@email.com>",
-            "keepalive": true,
-            "nicehash": false
+            "url": "coalmine.pro:5555",   // URL of mining server
+            "user": "<wallet address here>",   // username for mining server
+            "pass": "<WorkerName>:<notifications@email.com>",  // password for mining server
+            "keepalive": true,                 // send keepalived for prevent timeout (need pool support)
+            "nicehash": false                  // enable nicehash/xmrig-proxy support
         }
-    ]
+    ],
+    "api": {
+        "port": 0,                             // port for the miner API https://github.com/xmrig/xmrig/wiki/API
+        "access-token": null,                  // access token for API
+        "worker-id": null                      // custom worker-id for API
+    }
 }
